[Changes 1.2.2]

* Improve /WINDOW DESCRIBE output a little. (caf)

* If we can't create a socket for the first address returned by getaddrinfo(),
  try the other returned addresses. (caf)

* Only show version once with -v option (reported by cpet). (caf)

* Drop group privileges before droppping user privileges when execing. (caf)

* Apply patch from cpet to make autogen.sh prompt to run configure. (caf)

* Improve some messages in /window size (reported by cpet). (caf)

* Improve messages around DCC auto-get / auto-rename / auto-resume. (caf)

* Fix spelling of "receive" in all client output. (caf)

* Ignore DCC ACCEPT if RESUME wasn't requested. (caf)

* Fix /KB so that it kicks-then-bans as intended (reported by profiler). (caf)

* Fix $functioncall() scripting function (reported by |Rain|). (caf)

* Ensure close_server() clears the internal command queues for the right
  server. (caf)

* Remove obsolete AIM plugin. (caf)

* Tighten up the handling of channel WALLs. (caf)

* Don't mangle ANSI sequences in NOTICEs. (caf)

* Use BitchX.kill in all cases for random /KILL messages, and install a
  copy of this file. (caf)

* Fix potential crash in /unban, and change it so that it correctly matches
  the user@ portion of the hostmask. (caf)

* Clean up the build by fixing up the (unsigned char *) / (char *) mismatches
  that the compiler warns about. (caf)

* Fix bxconfigure crashing on very wide terminals (reported by cpet). (caf)

* Remove obsolete Chatnet 310 numeric support (WANT_CHATNET). (caf)

* Rework the lag check to make it simpler and more reliable.  This adds
  a /set LAG_CHECK_INTERVAL to control the frequency of lag checks. (caf)

* Minor fixes to enable compiling against TCL8.5. (caf)

* Wire up /set DOUBLE_STATUS_LINE (reported by presi). (caf)

* Fix ignoring of nick changes. (caf)

[Changes 1.2.1]

* Prefer <fcntl.h> over <sys/fcntl.h> (reported by ncopa). (caf)

* Fix overflow in say() when handling a maximum-length client message. (caf)
